istio/manifest/helm/network/detail-to-product.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: detail-to-product
  namespace: graphql-system
spec:
  endpointSelector:
    matchLabels:
      app: book-details-app
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: product-app
