istio/manifest/helm/network/mysql-server-to-rating.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mysql-server-to-ratings
  namespace: graphql-system
spec:
  endpointSelector:
    matchLabels:
      app: book-mysql-app
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: book-rating-app
