istio/manifest/helm/network/product-app-to-world.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: product-app-world
  namespace: graphql-system
spec:
  endpointSelector:
    matchLabels:
      app: product-app
  ingress:
    - fromEntities:
        - all
